fix: add full height and width to frame

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header class="text-2xl p-2">iframe embedded content below</header>
     <main class="border-5 border-blue-500 grow">
       <iframe
+        class="h-full w-full"
         src="https://shipshape.talis.local:4200/3/life/lists/1483B686-B920-7E52-B390-6134B7101F81"
       ></iframe>
     </main>
